React Final Project: Looking for Movies Library

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,381 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Open+Sans:wght@400;500;700&family=Roboto:wght@400;500;700&display=swap');
+
+a {
+  color: #fff;
+  text-decoration: none;
+  transition: ease-in-out .5s;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'roboto', sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#landing-page {
+  background-color: black;
+  min-height: 200vh;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  height: 300px;
+
+
+}
+
+
+li {
+  list-style-type: none;
+}
+
+.nav__link--list {
+  display: flex;
+  align-items: center;
+
+}
+
+.nav__link {
+  margin: 0 12px;
+  color: white;
+  font-weight: 700;
+  font-size: 24px;
+  margin-right: 48px;
+
+}
+
+.nav__link-home {
+  cursor: pointer;
+}
+
+.nav__link-home:hover {
+  transform: scale(1.1);
+  transition: all 500ms ease;
+}
+
+.logo {
+  height: 200px;
+  width: 200px;
+}
+
+.btn {
+
+  background: transparent;
+  height: 50px;
+  width: 200px;
+  border-radius: 10px;
+  border: 3px solid #fff;
+  cursor: pointer;
+  text-transform: uppercase;
+  letter-spacing: 5px;
+  font-weight: 700;
+  font-size: 24px;
+  box-shadow: 0 0 0 white;
+  transition: ease-in .5s;
+
+}
+
+
+
+
+
+.btn:hover {
+  box-shadow: 0 0 20px #fff;
+  inset: 200px 0 #fff;
+}
+
+.btn:hover a {
+  color: #fff;
+}
+
+/* SEARCH BAR */
+
+.search__container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  width: 100%;
+  background-color: white;
+  margin-top: 72px;
+
+}
+
+
+.search__header {
+  margin-bottom: 50px;
+  font-size: 30px;
+  letter-spacing: 3px;
+  color: black;
+  text-transform: uppercase;
+  text-align: center;
+  line-height: 40px;
+
+
+}
+
+
+.search__heading {
+  font-size: 48px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bolder;
   color: white;
+  text-shadow: 1px 1px 10px gold, 1px 1px 10px black;
+  transition: ease-in 1s;
+
+
+
+
 }
 
-.App-link {
-  color: #61dafb;
+.search__box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 300px;
+  height: 48px;
+  overflow: hidden;
+  border: none;
+  border-radius: 20px;
+  box-shadow: 0 10px 25px black;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+
+.search__wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  margin: 12px 0;
+}
+
+
+input {
+  width: 100%;
+  height: 100%;
+  padding: 5px 20px;
+  outline: none;
+  border: none;
+  background-color: white;
+}
+
+input::placeholder {
+  font-size: 16px;
+  font-weight: 600px;
+}
+
+
+.btn__search {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-style: none;
+  background-color: transparent;
+  margin-right: 12px;
+  cursor: pointer;
+
+}
+
+.fa-magnifying-glass {
+  height: 20px;
+  width: 20px;
+  transition: all 300ms ease;
+
+}
+
+.fa-magnifying-glass :hover {
+  color: gold;
+}
+
+
+
+/* SEARCH RESULT SECTION */
+
+.card-skeleton {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+  width: 25%;
+  height: 50%;
+  padding: 0.5rem;
+  margin-left: 52px;
+  border: 1px solid grey;
+  border-radius: 5px;
+  border: none;
+
+
+}
+
+.card-skeleton .left-col {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
+
+}
+
+.card-skeleton .right-col {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex: 0.5;
+  width: 100%;
+  padding: 5px;
+  margin-bottom: 5px;
+
+}
+
+
+
+.movies__list--wrapper {
+  display: flex;
+  align-items: center;
+  margin: 0 auto;
+  flex-wrap: wrap;
+
+
+}
+
+
+.movie__wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 25%;
+  text-align: center;
+  color: black;
+}
+
+
+
+.movie__card {
+  overflow: hidden;
+  position: relative;
+  border-radius: 5px;
+  margin: 24px auto;
+  max-height: 320px;
+  height: 400px;
+}
+
+
+
+.movie__card:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+  transition: all 500ms ease;
+}
+
+.movie__img {
+  width: 50%;
+  height: 100%;
+  margin: 16px;
+  border-radius: 25px;
+}
+
+.logo:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+  transition: all 500ms ease;
+}
+
+
+
+.movie__description {
+  color: white;
+  font-weight: bold;
+
+}
+
+.results__header {
+  position: relative;
+  color: white;
+  font-weight: bold;
+  font-size: 32px;
+  display: flex;
+  justify-content: center;
+  margin-top: 24px;
+  margin-bottom: 24px;
+  z-index: 3;
+}
+
+/* MOVIE RESULT PAGE */
+
+.movie__wrapper-result {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.movie__card--result {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+
+.chosen__movie--title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: rgb(0, 255, 225);
+  font-weight: 700;
+  font-size: x-large;
+
+}
+
+.movie__description-result {
+  margin-top: 12px;
+}
+
+.movie__img--wrapper-result {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
+
+.movie__card-result {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  overflow: hidden;
+  position: relative;
+  border-radius: 5px;
+  margin: 32px auto;
+  max-height: 320px;
+  height: 400px;
+}
+
+
+.movie__card-result:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+  transition: all 500ms ease;
+}
+
+
+/* DYNAMIC WEBSITE */
+
+@media (max-width:670px) {
+  nav {
+    display: none;
+    background-color: black;
   }
-  to {
-    transform: rotate(360deg);
+
+  .movie__wrapper-result {
+    padding-top: 250px;
+
+
   }
 }
